# skill-prd-to-product-agents

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deny.toml
.agents/skills/prd-to-product-agents/: .gitattributes  .npmignore  README.md  SKILL.md
.agents/skills/prd-to-product-agents/references/: agent-communication-model.md  agent-flow.md  context-freshness-skill.md  git-context-guide.md  memory-model.md  model-routing.md  prd-to-product-agents-cli-reference.md  safe-git-rules.md  skill-bootstrap-error-recovery.md  skill-bootstrap-usage.md  skill-platform-compatibility.md  sync-mapping.md  system-design.md  workspace-architecture.md
.agents/skills/prd-to-product-agents/references/examples/: finding-example.md  handoff-example.md  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: audit-finding.md  bug-report.md  config.yml  feature-request.md  release-regression.md
.github/scripts/: generate_bundle_metadata.py
.github/workflows/: build-skill-binaries.yml  dependency-review.yml  enterprise-readiness-sandbox.yml  release-binaries.yml  repo-validation.yml
cli-tools/prd-to-product-agents-cli/: Cargo.toml
cli-tools/prd-to-product-agents-cli/src/: bootstrap.rs  bundle.rs  capabilities.rs  clean.rs  logging.rs  main.rs  preflight.rs  util.rs  validate.rs
cli-tools/prd-to-product-agents-cli/tests/: bootstrap_e2e.rs  template_consistency.rs  validate_e2e.rs  workspace_portability.rs
cli-tools/prdtp-agents-functions-cli/: Cargo.toml
cli-tools/prdtp-agents-functions-cli/crates/prdtp-agents-shared/: Cargo.toml
cli-tools/prdtp-agents-functions-cli/crates/prdtp-agents-shared/src/: audit.rs  capabilities.rs  enums.rs  fs_util.rs  lib.rs  tool_detection.rs  workspace_paths.rs  yaml_ops.rs
cli-tools/prdtp-agents-functions-cli/src/: agents.rs  board.rs  database.rs  dependencies.rs  encoding.rs  github.rs  github_api.rs  governance.rs  logging.rs  main.rs
cli-tools/prdtp-agents-functions-cli/src/audit/: events.rs  export.rs  mod.rs  replay.rs  sink.rs  sync.rs
cli-tools/prdtp-agents-functions-cli/src/capabilities/: detect.rs
cli-tools/prdtp-agents-functions-cli/src/common/: capability_contract.rs  mod.rs
cli-tools/prdtp-agents-functions-cli/src/git/: branch.rs  commit.rs  hooks.rs  mod.rs  pre_commit.rs
cli-tools/prdtp-agents-functions-cli/src/operations/: environment.rs  finding.rs  handoff.rs  mod.rs  release.rs  state_store.rs
cli-tools/prdtp-agents-functions-cli/src/reporting/: dashboard.rs  export.rs  mod.rs  pack.rs  serve.rs  snapshot.rs
cli-tools/prdtp-agents-functions-cli/src/validate/: agents.rs  ci.rs  governance.rs  mod.rs  models.rs  pr_governance.rs  prompts.rs  readiness.rs  workspace.rs
cli-tools/prdtp-agents-functions-cli/tests/: runtime_contract.rs
cli-tools/project-memory-cli/: Cargo.toml  README.md
cli-tools/project-memory-cli/src/: cli.rs  config.rs  embeddings.rs  lib.rs  main.rs  model.rs  output.rs  query.rs  scan.rs  store.rs  trace.rs  util.rs  validate.rs  watch.rs
cli-tools/project-memory-cli/tests/: project_memory_e2e.rs
cli-tools/skill-dev-cli/: Cargo.toml
cli-tools/skill-dev-cli/src/: main.rs  test_cmd.rs  util.rs
cli-tools/skill-dev-cli/tests/: gitattributes_consistency.rs  published_binary_contract.rs  template_runtime_consistency.rs
docs/: README.md  architecture-map.md  current-status.md  known-limitations.md  maintainer-runbook.md  open-gaps.md  project-memory-cli-reference.md  repo-release-checklist.md  skill-dev-cli-reference.md  test-matrix.md
docs/audits/: README.md  index.md
docs/decisions/: ADR-0001-repository-docs-live-under-docs.md  ADR-0002-release-gate-blocks-repository-release.md  ADR-0003-scope-boundaries-between-repo-skill-and-workspace.md  README.md
docs/project-memory/: README.md  architecture.md  epics.md  implementation-log.md  mvp.md  roadmap.md
docs/project-memory/issues/: PMEM-000.md  PMEM-001.md  PMEM-002.md  PMEM-003.md  PMEM-004.md  PMEM-005.md  PMEM-006.md  PMEM-007.md  PMEM-008.md  PMEM-009.md  PMEM-010.md  PMEM-011.md  PMEM-012.md  PMEM-013.md  PMEM-014.md  PMEM-015.md  PMEM-016.md  PMEM-017.md  PMEM-018.md  PMEM-019.md
(+119 files in other folders)
