[package]
name = "prd-to-product-agents-cli"
version = "1.0.0"
edition = "2021"
description = "prd-to-product-agents skill CLI — bootstrap, validate, clean, preflight"

[[bin]]
name = "prd-to-product-agents-cli"
path = "src/main.rs"

[dependencies]
prdtp-agents-shared = { path = "../prdtp-agents-functions-cli/crates/prdtp-agents-shared" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
anyhow = "1"
sha2 = "0.10"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
