[package]
name = "project-memory-cli"
version = "1.0.0"
edition = "2021"
description = "Project memory CLI for local repository indexing, traceability, and incremental retrieval"

[[bin]]
name = "project-memory-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
colored = "2"
sha2 = "0.10"
ignore = "0.4"
regex = "1"
notify = "8"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
