[package]
name = "skill-dev-cli"
version = "1.0.0"
edition = "2021"
description = "Project-scope CLI for prd-to-product-agents skill development"

[[bin]]
name = "skill-dev-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
anyhow = "1"
sha2 = "0.10"
colored = "2"

[dev-dependencies]
tempfile = "3"
prdtp-agents-shared = { path = "../prdtp-agents-functions-cli/crates/prdtp-agents-shared" }

[profile.release]
strip = true
lto = true
opt-level = "z"